--- a/src/DocumentProcessor.Web/appsettings.json
+++ b/src/DocumentProcessor.Web/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "Logging":  {
                     "LogLevel":  {
                                      "Default":  "Information",
@@ -10,7 +10,7 @@
                 },
     "AllowedHosts":  "*",
     "ConnectionStrings":  {
-                              "DefaultConnection":  "Server=full-stack-dotnet-and-sql-server-moder-mam319sqldb-ganivhzajvzr.civiu02ac7da.us-east-1.rds.amazonaws.com,1433;Database=DPS;TrustServerCertificate=true;MultipleActiveResultSets=true"
+                              "DefaultConnection":  "Host=full-stack-dotnet-and-sql-server-moder-mam319sqldb-ganivhzajvzr.civiu02ac7da.us-east-1.rds.amazonaws.com;Database=postgres;SSL Mode=Require;Trust Server Certificate=true"
                           },
     "DocumentProcessing":  {
                                "StoragePath":  "uploads",
